Resolved trello's issues

--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -432,8 +432,8 @@ h3.cart-page-title {
           border: 1px solid #ebebeb;
           box-shadow: none;
 
-          -webkit-appearance: none;
-          -moz-appearance: none;
+          // -webkit-appearance: none;
+// -moz-appearance: none;
         }
 
         input {
