--- a/src/assets/scss/_login-register.scss
+++ b/src/assets/scss/_login-register.scss
@@ -81,8 +81,8 @@
           color: #333;
           border: 1px solid #e6e6e6;
 
-          -webkit-appearance: none;
-          -moz-appearance: none;
+          // -webkit-appearance: none;
+// -moz-appearance: none;
         }
 
         .error-msg {
