--- a/src/assets/scss/_checkout.scss
+++ b/src/assets/scss/_checkout.scss
@@ -96,8 +96,8 @@
       color: #333;
       border: 1px solid #e6e6e6;
 
-      -webkit-appearance: none;
-      -moz-appearance: none;
+      // -webkit-appearance: none;
+ // -moz-appearance: none;
     }
   }
 
@@ -255,7 +255,9 @@
       }
 
       .your-order-bottom {
-        margin-bottom: 14px;
+        margin-bottom: 18px;
+        padding: 0px 0 19px;
+        border-bottom: 1px solid #dee0e4;
 
         ul {
           display: flex;
@@ -317,10 +319,10 @@
       }
 
       .your-order-total {
-        margin: 18px 0 33px;
-        padding: 17px 0 19px;
+        // margin: 18px 0 33px;
+        padding: 0px 0 19px;
 
-        border-top: 1px solid #dee0e4;
+        // border-top: 1px solid #dee0e4;
         border-bottom: 1px solid #dee0e4;
 
         ul {
