When completing an order i see 'test@test.com’ as email address, i wand to make sure that this is an address of the customer - Done Product with multiple images do not have other images clickable - Done An issue when removing from cart an item from another store - It’s working (Attached  video please check) Checkout an order when customer is logged in - The checkout process working fine but then user can not log in into the system (Attached  video please check)

--- a/src/assets/scss/_my-account.scss
+++ b/src/assets/scss/_my-account.scss
@@ -17,7 +17,8 @@
   }
 
   .delete_account {
-    background-color: #f9f9f9;
+    background-color: red !important;
+    color: #fff !important;
     border-bottom: 1px solid #ebebeb;
     font-size: 15px;
     font-weight: 500;
