--- a/src/assets/scss/_login-register.scss
+++ b/src/assets/scss/_login-register.scss
@@ -50,8 +50,7 @@
     }
   }
 
-  .auto-fill-password {
-    text-security: disc;
+  .user-password {
     -webkit-text-security: disc;
     -moz-text-security: disc;
   }
