--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -476,7 +476,7 @@ h3.cart-page-title {
     form {
       input {
         height: 40px;
-        margin-bottom: 30px;
+
         padding-left: 10px;
 
         border: 1px solid #ebebeb;
@@ -486,7 +486,7 @@ h3.cart-page-title {
       button.cart-btn-2 {
         font-size: 14px;
         font-weight: 500;
-
+        margin-top: 30px;
         padding: 13px 42px 12px;
 
         cursor: pointer;
