--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -21,7 +21,7 @@ body {
 }
 
 body {
-  font-family: $poppins;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
@@ -37,7 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $poppins;
+  font-family: Arial, Helvetica, sans-serif;;
   font-weight: 400;
 
   margin-top: 0;
@@ -46,7 +46,7 @@ h6 {
 }
 
 p {
-  font-family: $poppins;
+  font-family: Arial, Helvetica, sans-serif;;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
