--- a/src/assets/scss/_slider.scss
+++ b/src/assets/scss/_slider.scss
@@ -3307,3 +3307,77 @@
     }
   }
 }
+
+/** static slider **/
+
+.site-blocks-cover {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background: #f9f9f9;
+  position: relative;
+  overflow: hidden;
+  z-index: 9; }
+  .site-blocks-cover, .site-blocks-cover .row {
+    min-height:500px;
+    height: calc(100vh - 230px); }
+  .site-blocks-cover.inner-page, .site-blocks-cover.inner-page .row {
+    min-height: 400px;
+    height: 500px; }
+  .site-blocks-cover h2 {
+    font-size: 14px;
+    font-weight: normal;
+    color: #000;
+    letter-spacing: .2em;
+    text-transform: uppercase; }
+  .site-blocks-cover h1 {
+    font-size: 50px;
+    font-weight: 200;
+    line-height: 72px !important;
+    color: #000;
+    margin-bottom: 30px;
+    text-transform: uppercase; }
+    @media (min-width: 768px) {
+      .site-blocks-cover h1 {
+        font-size: 60px; } }
+  .site-blocks-cover p {
+    color: #333333;
+    font-size: 20px;
+    line-height: 35px;
+    margin: 10px !important;
+  }
+  .site-blocks-cover .intro-text {
+    font-size: 16px;
+    line-height: 1.5; }
+  .site-blocks-cover .site-block-cover-content {
+    margin-top: 20%;
+    text-align: center; }
+    @media (min-width: 768px) {
+      .site-blocks-cover .site-block-cover-content {
+        margin-top: 50%; } }
+  .site-blocks-cover.inner-page .site-block-cover-content {
+    margin-top: 20%;
+    text-align: center; }
+    @media (min-width: 768px) {
+      .site-blocks-cover.inner-page .site-block-cover-content {
+        margin-top: 30%; } }
+
+
+  .btn {
+          height: 43px;
+          -webkit-transition: .3s all ease-in-out;
+          -o-transition: .3s all ease-in-out;
+          transition: .3s all ease-in-out;
+          text-transform: uppercase;
+          font-size: 13px; }
+          .btn:hover, .btn:active, .btn:focus {
+            outline: none;
+            -webkit-box-shadow: none;
+            box-shadow: none; }
+          .btn.btn-black {
+            padding: 12px 30px;
+            background: #000;
+            color: #fff; }
+            .btn.btn-black:hover, .btn.btn-black:active, .btn.btn-black:focus {
+              background-color: #333333; 
+    }
