--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -1966,10 +1966,38 @@ a.default-btn {
 }
 
 @media (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
+   .container  {
+    /*max-width: 1200px;*/
+    max-width: 100%;
+    margin-left: 0% !important;
+    margin-right: 0% !important;
+    padding-left: 0% !important;
+    padding-right: 0% !important;
   }
 }
+
+  .container .acceuil h2 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 18px !important;
+    font-weight: normal !important;
+    color: #000 !important;
+    letter-spacing: 0.2em !important;
+    margin-top: 10% !important;
+    margin-bottom: 10% !important;
+    text-align: center !important;
+  }
+
+  .container .acceuil  h4 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px !important;
+    font-weight: normal !important;
+    color: #000 !important;
+    letter-spacing: 0.2em !important;
+    margin-top: 10% !important;
+    margin-bottom: 10% !important;
+    text-align: center !important;
+  }
+
 
 .item-empty-area {
   &__icon {
